--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,90 +1,142 @@
 /* RESET(para no dejar que el padding si,e al width) */
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+html {
+  font-size: sans-serif;
 }
 
 /* VARIABLES */
-:root{
-    --margenGrid-S: 20px;
-    --margenGrid-D: 40PX;
+:root {
+  --margenGrid-S: 20px;
+  --margenGrid-D: 40px;
 }
 
 /* CONTENEDOR -Grid */
-.contenedor-grid, main{
-    /* padding: 0 var(--margenGrid-S); */
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-    grid-template-rows: [header]60px [main]1fr [footer]1fr;
-    /* grid-template-rows: [header]60px [main]auto [footer]auto; */
-    column-gap: var(--margenGrid-S);
-    @media only screen and (min-width: 1000px){
-        /* padding: 0 var(--margenGrid-D); */
-        /* display: grid; */
-        grid-template-columns: repeat(12,1fr);
-        column-gap: var(--margenGrid-D);
-    }
+.contenedor-grid,
+main {
+  /* padding: 0 var(--margenGrid-S); */
+  display: grid;
 
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: [header]60px [main]1fr [footer]1fr;
+  /* grid-template-rows: [header]60px [main]auto [footer]auto; */
+  column-gap: var(--margenGrid-S);
+  row-gap: 20px;
+
+  @media only screen and (min-width: 1000px) {
+    /* padding: 0 var(--margenGrid-D); */
+    /* display: grid; */
+    grid-template-columns: repeat(12, 1fr);
+    column-gap: var(--margenGrid-D);
+  }
 }
 
 /* HEADER */
 /* ancho total */
-header, main, footer, .main__titular, .main__slogan {
-    grid-column: 1/-1;
+header,
+main,
+footer,
+.main__titular,
+.main__slogan {
+  grid-column: 1/-1;
 }
 
-header{
-    /* height: 60px; */
-    /* grid-column: 1/-1; */
-    background-color: greenyellow;
+header {
+  /* height: 60px; */
+  /* grid-column: 1/-1; */
+  background-color: greenyellow;
 
-    /* & nav {max-width: 1024px;
+  /* & nav {max-width: 1024px;
     display: flex; 
     justify-content: space-between;
     } */
 }
 
 /* MAIN */
-main{
-    /* Eliminar el GRE(grid template row)que teniamos para el div */
-    grid-auto-flow: none;
+main {
+  /* Eliminar el GRE(grid template row)que teniamos para el div */
+  /* grid-auto-flow: none; */
+  grid-template-rows: none;
 
-    /* grid-column: 1/-1; */
-    background-color: turquoise;
-    margin: 0 var(--margenGrid-S);
-    /* max-width: 1024px; */
-    /* align-items: center; */
-    & .main__titular{
-        grid-column: 1/-1;
-        grid-row: 80px;
-        justify-self: center;
-        /* align-self: center; */
-    }
+  /* grid-column: 1/-1; */
+  background-color: turquoise;
+  margin: 0 var(--margenGrid-S);
+  /* max-width: 1024px; */
 
-    & .main__slogan{
-        grid-column: 1/-1;
-        max-width: 1024px;
-        justify-self: center;    
-    }
+  & .main__titular {
+    grid-column: 1/-1;
+    grid-row: 80px;
+    justify-self: center;
+  }
 
-& img{
+  & .main__slogan {
+    grid-column: 1/-1;
+    max-width: 1024px;
+    justify-self: center;
+  }
+
+  & img {
     /* se acopla en la web */
     width: 100%;
-}
+  }
 
-& .main__imagen01{
+  & .main__imagen01 {
     grid-column: 1/4;
-}
+  }
 
-& .main__imagen02{
+  & .main__imagen02 {
     grid-column: 4/7;
-}
-}
+  }
 
+  & .main__imagen03 {
+    grid-column: 1/6;
+  }
 
+  & .main__imagen04 {
+    grid-column: 2/7;
+  }
+
+  /* & h2{
+    transform: rotate(90deg);
+    grid-column: step(1);
+    margin: 0;
+} */
+
+  & .main__food,
+  & .main__comida {
+    grid-column: 1;
+
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    grid-column: 6/7;
+    margin: 0;
+    font-size: 1.3rem;
+    font-weight: bold;
+  }
+
+  & .flechita {
+    width: 48px;
+    grid-column: 3/5;
+    grid-column: 3 / span/2;
+    justify-self: center;
+  }
+}
 
 /* FOOTER */
 /* ancho total */
-footer{
-/* grid-column: 1/-1; */
-background-color: grey;
+footer {
+  /* grid-column: 1/-1; */
+  background-color: grey;
 }
