--- a/css/estilos.css
+++ b/css/estilos.css
@@ -73,6 +73,7 @@ main {
   /* grid-column: 1/-1; */
   background-color: turquoise;
   margin: 0 var(--margenGrid-S);
+  /* row-gap: 20px; */
   /* max-width: 1024px; */
 
   & .main__titular {
@@ -83,8 +84,9 @@ main {
 
   & .main__slogan {
     grid-column: 1/-1;
-    max-width: 1024px;
+    /* max-width: 1024px; */
     justify-self: center;
+    text-align: center;
   }
 
   & img {
