--- a/css/estilos.css
+++ b/css/estilos.css
@@ -51,6 +51,7 @@ footer,
 .main__titular,
 .main__slogan {
   grid-column: 1/-1;
+  text-align: center;
 }
 
 header {
@@ -71,7 +72,7 @@ main {
   grid-template-rows: none;
 
   /* grid-column: 1/-1; */
-  background-color: turquoise;
+  /* background-color: turquoise; */
   margin: 0 var(--margenGrid-S);
   /* row-gap: 20px; */
   /* max-width: 1024px; */
@@ -118,14 +119,17 @@ main {
 
   & .main__food,
   & .main__comida {
-    grid-column: 1;
-
+    /* donde lo que llegue solo ocupa 1 columna */
+    grid-column: span 1;
     writing-mode: vertical-rl;
     text-orientation: upright;
-    grid-column: 6/7;
+    /* grid-column: 6/7; */
     margin: 0;
-    font-size: 1.3rem;
-    font-weight: bold;
+    font-size: 1.4rem;
+    font-weight: bolder;
+
+    /* linea base o  altura de linea */
+    /* line-height: normal; */
   }
 
   & .flechita {
