--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 /* RESET(para no dejar que el padding si,e al width) */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-
+/* 
 h1,
 h2,
 h3,
@@ -10,37 +10,37 @@ h4,
 h5,
 h6,
 p {
-    margin: 0;
-}
+  margin: 0;
+} */
 
 html {
-    font-size: sans-serif;
+  font-size: sans-serif;
 }
 
 /* VARIABLES */
 :root {
-    --margenGrid-S: 20px;
-    --margenGrid-D: 40px;
+  --margenGrid-S: 20px;
+  --margenGrid-D: 40px;
 }
 
 /* CONTENEDOR -Grid */
 .contenedor-grid,
 main {
-    /* padding: 0 var(--margenGrid-S); */
-    display: grid;
+  /* padding: 0 var(--margenGrid-S); */
+  display: grid;
 
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: [header]60px [main]1fr [footer]1fr;
-    /* grid-template-rows: [header]60px [main]auto [footer]auto; */
-    column-gap: var(--margenGrid-S);
-    row-gap: 20px;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: [header]60px [main]1fr [footer]1fr;
+  /* grid-template-rows: [header]60px [main]auto [footer]auto; */
+  column-gap: var(--margenGrid-S);
+  row-gap: 20px;
 
-    @media only screen and (min-width: 1000px) {
-        /* padding: 0 var(--margenGrid-D); */
-        /* display: grid; */
-        grid-template-columns: repeat(12, 1fr);
-        column-gap: var(--margenGrid-D);
-    }
+  @media only screen and (min-width: 1000px) {
+    /* padding: 0 var(--margenGrid-D); */
+    /* display: grid; */
+    grid-template-columns: repeat(12, 1fr);
+    column-gap: var(--margenGrid-D);
+  }
 }
 
 /* HEADER */
@@ -50,16 +50,16 @@ main,
 footer,
 .main__titular,
 .main__slogan {
-    grid-column: 1/-1;
-    text-align: center;
+  grid-column: 1/-1;
+  text-align: center;
 }
 
 header {
-    /* height: 60px; */
-    /* grid-column: 1/-1; */
-    background-color: greenyellow;
+  /* height: 60px; */
+  /* grid-column: 1/-1; */
+  background-color: greenyellow;
 
-    /* & nav {max-width: 1024px;
+  /* & nav {max-width: 1024px;
     display: flex; 
     justify-content: space-between;
     } */
@@ -67,71 +67,122 @@ header {
 
 /* MAIN */
 main {
-    /* Eliminar el GRE(grid template row)que teniamos para el div */
-    /* grid-auto-flow: none; */
-    grid-template-rows: none;
+  /* Eliminar el GRE(grid template row)que teniamos para el div */
+  /* grid-auto-flow: none; */
+  grid-template-rows: none;
 
-    /* grid-column: 1/-1; */
+  /* grid-column: 1/-1; */
 
-    margin: 0 var(--margenGrid-S);
-    /* max-width: 1024px; */
+  margin: 0 var(--margenGrid-S);
+  /* max-width: 1024px; */
 
-    & .main__titular {
-        grid-column: 1/-1;
-        grid-row: 80px;
-        justify-self: center;
+  & .main__titular {
+    grid-column: 1/-1;
+    grid-row: 80px;
+    justify-self: center;
+  }
+
+  & .main__slogan {
+    grid-column: 1/-1;
+    max-width: 1024px;
+    justify-self: center;
+  }
+
+  & img {
+    /* se acopla en la web */
+    width: 100%;
+  }
+
+  & .main__imagen01 {
+    grid-column: 1/4;
+  }
+
+  & .main__imagen02 {
+    grid-column: 4/7;
+  }
+
+  & .main__imagen03 {
+    grid-column: 1/6;
+  }
+
+  & .main__imagen04 {
+    grid-column: 2/7;
+  }
+
+  & .main__food,
+  & .main__comida {
+    grid-column: span 1;
+    align-self: center;
+
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    margin: 0;
+    font-size: 1.4rem;
+    font-weight: bolder;
+  }
+
+  & .flechita {
+    width: 48px;
+    grid-column: 3/5;
+    grid-column: 3 / span/2;
+    justify-self: center;
+  }
+}
+
+
+
+/* MOVIL */
+/* .banner {
+  display: none;
+} */
+
+/* Escritorio */
+@media only screen and (min-width: 1000px) {
+  .banner {
+    /* background-repeat: no-repeat; */
+    background-position: center;
+    background-size: cover;
+
+    /* display: none; */
+    /* background:red url(../img/desktop/bannercomida. webp) no-repeat; */
+    background: red url(../img/desktop/bannercomida.webp) no-repeat;
+
+    grid-column: 1 / -1;
+    height: 650px;
+
+    /* 12 columnas */
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: [zona arriba]1fr [titulo]auto [slogan]auto [zona abajo]1fr;
+    column-gap: var(--margenGrid-D);
+    row-gap: 40px;
+
+    & .main__titular, & .main__slogan {
+      grid-row: 2 / 3;
+      grid-column: 1 / 4;
+      /* justify-self: center; */
+      text-align: center;
+      padding:  0 40px;
     }
 
     & .main__slogan {
-        grid-column: 1/-1;
-        max-width: 1024px;
-        justify-self: center;
+      grid-row: 3 / 4;
     }
-
-    & img {
-        /* se acopla en la web */
-        width: 100%;
-    }
-
-    & .main__imagen01 {
-        grid-column: 1/4;
-    }
-
-    & .main__imagen02 {
-        grid-column: 4/7;
-    }
-
-    & .main__imagen03 {
-        grid-column: 1/6;
-    }
-
-    & .main__imagen04 {
-        grid-column: 2/7;
-    }
-
-    & .main__food,
-    & .main__comida {
-        grid-column: span 1;
-        align-self: center;
-
-        writing-mode: vertical-rl;
-        text-orientation: upright;
-        margin: 0;
-        font-size: 1.4rem;
-        font-weight: bolder;
-    }
-
-    & .flechita {
-        width: 48px;
-        grid-column: 3/5;
-        grid-column: 3 / span/2;
-        justify-self: center;
-    }
+    
+    /* .main__titular,
+    .main__slogan {
+      display: none;
+    } */
+  }
 }
+
+/* .banner{
+    display: block;
+} */
 
 /* FOOTER */
 /* ancho total */
 footer {
     /* grid-column: 1/-1; */
     background-color: grey;
-}
+  }
